[gd_scene load_steps=5 format=3 uid="uid://bvojmcexaej0y"]

[ext_resource type="Script" path="res://tools/Mob maker/mob_maker_saveload.gd" id="1_etikc"]
[ext_resource type="PackedScene" uid="uid://dptrctbyf6531" path="res://enemy/enemy.tscn" id="1_odys7"]
[ext_resource type="FontFile" uid="uid://csk3yjakarmrm" path="res://assets/Unutterable-Regular.ttf" id="4_tqovl"]

[sub_resource type="Theme" id="Theme_1nkv0"]
default_font = ExtResource("4_tqovl")
default_font_size = 32

[node name="Mob Maker" type="Node2D"]

[node name="saveload" type="Node2D" parent="."]
script = ExtResource("1_etikc")

[node name="Enemy" parent="saveload" instance=ExtResource("1_odys7")]
position = Vector2(416, 368)
scale = Vector2(2, 2)

[node name="FileDialog_FSM" type="FileDialog" parent="saveload"]
title = "Open a File"
initial_position = 1
size = Vector2i(600, 400)
ok_button_text = "열기"
file_mode = 0
root_subfolder = "res://enemy/fsm_resource"

[node name="FileDialog_save" type="FileDialog" parent="saveload"]
initial_position = 1
size = Vector2i(600, 400)
root_subfolder = "res://enemy/enemy_resource"

[node name="FileDialog_load" type="FileDialog" parent="saveload"]
title = "Open a File"
initial_position = 1
size = Vector2i(600, 400)
ok_button_text = "열기"
file_mode = 0
root_subfolder = "res://enemy/enemy_resource"

[node name="load_enemy" type="Button" parent="saveload"]
offset_left = 1024.0
offset_top = 192.0
offset_right = 1344.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 36
text = "load Enemy"

[node name="save_enemy_as" type="Button" parent="saveload"]
offset_left = 1536.0
offset_top = 192.0
offset_right = 1856.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 36
text = "save Enemy as"

[node name="Control" type="Control" parent="saveload"]
layout_mode = 3
anchors_preset = 0
offset_top = 696.0
offset_right = 872.0
offset_bottom = 1080.0
metadata/_edit_lock_ = true

[node name="enemy_name" type="LineEdit" parent="saveload/Control"]
layout_mode = 0
offset_left = 384.0
offset_top = 8.0
offset_right = 768.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 24
placeholder_text = "enemy name"
alignment = 1

[node name="Label" type="Label" parent="saveload/Control"]
layout_mode = 0
offset_left = 104.0
offset_top = 8.0
offset_right = 352.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 24
text = "enemy_name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="max_hp" type="SpinBox" parent="saveload/Control"]
layout_mode = 0
offset_left = 384.0
offset_top = 136.0
offset_right = 771.0
offset_bottom = 200.0
theme = SubResource("Theme_1nkv0")
min_value = 1.0
max_value = 999.0
value = 10.0
alignment = 1

[node name="Label2" type="Label" parent="saveload/Control"]
layout_mode = 0
offset_left = 104.0
offset_top = 136.0
offset_right = 352.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 24
text = "max hp"
horizontal_alignment = 1
vertical_alignment = 1

[node name="load_FSM" type="Button" parent="saveload/Control"]
layout_mode = 0
offset_left = 128.0
offset_top = 264.0
offset_right = 320.0
offset_bottom = 328.0
theme_override_font_sizes/font_size = 36
text = "load FSM"

[node name="fsm_path" type="Label" parent="saveload/Control"]
layout_mode = 0
offset_left = 448.0
offset_top = 264.0
offset_right = 1280.0
offset_bottom = 328.0
theme_override_font_sizes/font_size = 32
text = "fsm_file_path.tres"
vertical_alignment = 1

[connection signal="file_selected" from="saveload/FileDialog_FSM" to="saveload" method="_on_file_dialog_fsm_file_selected"]
[connection signal="file_selected" from="saveload/FileDialog_save" to="saveload" method="_on_file_dialog_save_file_selected"]
[connection signal="file_selected" from="saveload/FileDialog_load" to="saveload" method="_on_file_dialog_load_file_selected"]
[connection signal="pressed" from="saveload/load_enemy" to="saveload" method="_on_load_enemy_pressed"]
[connection signal="pressed" from="saveload/save_enemy_as" to="saveload" method="_on_save_enemy_as_pressed"]
[connection signal="pressed" from="saveload/Control/load_FSM" to="saveload" method="_on_load_fsm_pressed"]
